# solotto

./: .gitignore  Anchor.toml  README.md
cli/: README.md  package-lock.json  package.json
cli/src/: cli.js
programs/solotto/: Cargo.toml
programs/solotto/src/: lib.rs
tests/: solotto.js
